# satsuma

./: CMakeLists.txt  LICENSE  README.md  cnf.h  cnf2wl.h  formula.h  graph_tools.h  group_analyzer.h  hypergraph.h  parser.h  predicate.h  proof.h  satsuma.cpp  satsuma.h  utility.h
.github/workflows/: build.yml
src/: cnf.h  cnf2wl.h  formula.h  graph_parser.h  hypergraph.h  knf_parser.h  parser.h  pbf.h  predicate.h  proof.h  reorder.h  satsuma.cpp  satsuma.h  symmetries.h  tracker.h  utility.h
